2009-03-02  Alan Modra  <amodra@bigpond.net.au>

	2008-10-10  Nathan Froyd  <froydnj@codesourcery.com>
	* elf32-ppc.c (ppc_elf_merge_obj_attributes): Merge
	Tag_GNU_Power_ABI_Struct_Return.

	2008-10-03  Alan Modra  <amodra@bigpond.net.au>
	* elf.c (bfd_elf_set_group_contents): Assign sh_info for ld -r when
	the signature symbol is global.
	* elflink.c (elf_link_input_bfd): Ensure group signature symbol
	is output when ld -r.  Set group sh_info when local.
	* linker.c (default_indirect_link_order): Handle group sections
	specially.

	2008-09-28  Alan Modra  <amodra@bigpond.net.au>
	* elf.c (_bfd_elf_init_private_section_data): Tweak union copy.
	(bfd_section_from_shdr): Don't change SHT_GROUP section name.
	* elflink.c (section_signature): New function.
	(_bfd_elf_section_already_linked): Use it.

2009-02-15  Bjoern Haase  <bjoern.m.haase@web.de>

	PR 9841
	* elf32-avr.c: Handle case where no local symbos exist correctly.

2009-02-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* elf32-avr.c (avr_final_link_relocate): Allow avr25 to wraparound.

2009-02-03  Tristan Gingold  <gingold@adacore.com>

	* Makefile.am (RELEASE): Unset.
	* Makefile.in: Regenerated.

2009-02-02  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.19.1
	* Makefile.am (RELEASE): Set.
	* configure, Makefile.in: Regenerated.

2009-01-14  Joseph Myers  <joseph@codesourcery.com>

	* elf32-arm.c (elf32_arm_final_link_relocate): Do not turn
	branches to undefine weak symbols into branches to the next
	instruction if creating PLT entries for those symbols.

2008-12-23  Nick Clifton  <nickc@redhat.com>

	* Import this patch from the mainline:
	2008-11-10  Andreas Schwab  <schwab@suse.de>

	PR 7011
	* elf.c (assign_file_positions_for_non_load_sections): Handle
	PT_GNU_RELRO specially.

2008-11-20  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (allocate_dynrelocs): Always use tlsld_got for
	TLS_LD even when symbol is used with other TLS reloc types.