@@ -1,5 +1,11 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2008-11-11  Alan Modra  <amodra@bigpond.net.au>
+	PR 7012
+	* dwarf2.c (find_line): Don't keep stale pointers into realloc'd
+	memory.  Return on errors.  Fix memory leak.
+	(_bfd_dwarf2_cleanup_debug_info): Free dwarf_str_buffer.
+
 	2008-10-10  Nathan Froyd  <froydnj@codesourcery.com>
 	* elf32-ppc.c (ppc_elf_merge_obj_attributes): Merge
 	Tag_GNU_Power_ABI_Struct_Return.
